[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["Gorjan Radevski <gorjanradevski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
